--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="../images/fav_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
     <title>MLPY - EduTech Experiments</title>
     <link rel="icon" type="image" href="../static/images/logo.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,6 +14,17 @@
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
     <link rel="stylesheet" type="text/css" href="../static/css/hero.css">
     <link rel="stylesheet" href="https://unpkg.com/bulma-modal-fx/dist/css/modal-fx.min.css" />
+    
+    
+    <meta name="description" content="EduTech Experiments">
+    <meta name="keywords" content="EduTech Experiments, machine learning, ai, artificial intelligence, python, image classification">
+    <meta property="og:title" content="EduTech Experiments">
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="EduTech Experiments">
+    <meta property="og:image" content="https://mlpy.herokuapp.com/static/images/logo.png">
+    <meta property="og:url" content="https://mlpy.herokuapp.com">
+  
+
     <style>
     .columns:nth-child(2)
     {margin-top: -10rem;}
@@ -48,7 +59,7 @@
               <div class="content">
                 <h4>Machine Learning Image Prediction tool</h4>
                 <p>This interactive project uses <a href="https://www.tensorflow.org/js">Tensorflow JS</a> and <a href="teachablemachine.withgoogle.com">Teachable Machine from Google</a> to determine what instrument is found in an image. Take or upload a photo of a musical instrument to see if the machine can predict it.</p>
-                <a href="https://mlpython.eu.pythonanywhere.com/" target="_blank" class="button is-link modal-button" data-target="modal-image2">Predict</a>
+                <a href="/imageclassifier" class="button is-link modal-button" data-target="modal-image2">Predict</a>
               </div>
             </div>
           </div>
@@ -102,7 +113,7 @@
               <div class="content">
                 <h4>Data analysis with machine learning</h4>
                 <p>This interactive project, still under development, makes use of Google's Colab to generate a model, and then predicts with your input. It is another example of Machine Learning.</p>
-                <a href="https://mlpython.eu.pythonanywhere.com/" target="_blank" class="button is-link modal-button" data-target="modal-image2">Under construction</a>
+                <a href="/dataanalysis" class="button is-link modal-button" data-target="modal-image2">Under construction</a>
               </div>
             </div>
           </div>
