--- a/templates/instruments_newformat.html
+++ b/templates/instruments_newformat.html
@@ -127,12 +127,7 @@
   <section class="hero is-info is-small">
     <div class="hero-body">
       <div class="container has-text-centered">
-        <p class="title">
-          MLPY - EduTech Learning Experiments
-        </p>
-        <p class="subtitle">
-          The place to blend education and technology
-        </p>
+        <img src="../static/images/logo.png" alt="Placeholder image" class="modal-button" data-target="modal-image2">
       </div>
     </div>
   </section>
