--- a/templates/instruments_newformat.html
+++ b/templates/instruments_newformat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MLPY - EduTech Experiments</title>
+    <title>MLPY - EdTech Experiments</title>
     <link rel="icon" type="image" href="../static/images/logo.png">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -127,7 +127,7 @@
   <section class="hero is-info is-small">
     <div class="hero-body">
       <div class="container has-text-centered">
-        <img src="../static/images/logo.png" alt="Placeholder image" class="modal-button" data-target="modal-image2">
+        <img src="../static/images/logo.png" alt="EdTech Experiments" class="modal-button" data-target="modal-image2">
       </div>
     </div>
   </section>
