--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
-    <title>MLPY - EduTech Experiments</title>
+    <title>MLPY - EdTech Experiments</title>
     <link rel="icon" type="image" href="../static/images/logo.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.9.1/css/OverlayScrollbars.min.css'>
@@ -16,11 +16,11 @@
     <link rel="stylesheet" href="https://unpkg.com/bulma-modal-fx/dist/css/modal-fx.min.css" />
     
     
-    <meta name="description" content="EduTech Experiments">
-    <meta name="keywords" content="EduTech Experiments, machine learning, ai, artificial intelligence, python, image classification">
-    <meta property="og:title" content="EduTech Experiments">
+    <meta name="description" content="MLPY - EdTech Experiments">
+    <meta name="keywords" content="EdTech Experiments, education, technology, mlpy, machine learning, ai, artificial intelligence, python, image classification">
+    <meta property="og:title" content="MLPY - EdTech Experiments">
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="EduTech Experiments">
+    <meta property="og:description" content="EdTech Experiments">
     <meta property="og:image" content="https://mlpy.herokuapp.com/static/images/logo.png">
     <meta property="og:url" content="https://mlpy.herokuapp.com">
   
@@ -35,9 +35,8 @@
       <div class="hero-body">
         <div class="container has-text-centered">
 
-          <img src="../static/images/logo.png" alt="Placeholder image" class="modal-button" data-target="modal-image2">
+          <img src="../static/images/logo.png" alt="EdTech Experiments" class="modal-button" data-target="modal-image2">
          
-          
         </div>
       </div>
     </section>
@@ -52,13 +51,13 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="../static/images/tfjs.jpeg" alt="Placeholder image" class="modal-button" data-target="modal-image2">
+                <img src="../static/images/Instrument2.jpeg" alt="Machine Learning" class="modal-button" data-target="modal-image2">
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
                 <h4>Machine Learning Image Prediction tool</h4>
-                <p>This interactive project uses <a href="https://www.tensorflow.org/js">Tensorflow JS</a> and <a href="teachablemachine.withgoogle.com">Teachable Machine from Google</a> to determine what instrument is found in an image. Take or upload a photo of a musical instrument to see if the machine can predict it.</p>
+                <p>This interactive project uses Tensorflow JS and Teachable Machine from Google to determine what instrument is found in an image. Take or upload a photo of a musical instrument to see if the machine can predict it.</p>
                 <a href="/imageclassifier" class="button is-link modal-button" data-target="modal-image2">Predict</a>
               </div>
             </div>
@@ -68,7 +67,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="../static/images/medium.jpeg" alt="Placeholder image">
+                <img src="../static/images/medium.png" alt="Medium">
               </figure>
             </div>
             <div class="card-content">
@@ -85,7 +84,7 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="../static/images/jolastaikasi.jpg" alt="Placeholder image">
+                <img src="../static/images/jolastaikasi.jpg" alt="jolastaikasi">
               </figure>
             </div>
             <div class="card-content">
@@ -106,18 +105,38 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="../static/images/colab.jpeg" alt="Placeholder image" class="modal-button" data-target="modal-image2">
+                <img src="../static/images/datascience.jpeg" alt="Data Science" class="modal-button" data-target="modal-image2">
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
-                <h4>Data analysis with machine learning</h4>
+                <h4>Data science and machine learning</h4>
                 <p>This interactive project, still under development, makes use of Google's Colab to generate a model, and then predicts with your input. It is another example of Machine Learning.</p>
                 <a href="/dataanalysis" class="button is-link modal-button" data-target="modal-image2">Under construction</a>
               </div>
             </div>
           </div>
         </div>
+
+
+        <div class="column is-4">
+          <div class="card is-shady">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="../static/images/ibm.png" alt="Data Science" class="modal-button" data-target="modal-image2">
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content">
+                <h4>Cloud Native Applications</h4>
+                <p>This simple calculator is an example of a cloud native, serverless web app created and deployed with IBM Cloud. It's an excellent example of what can be done with serverless computing.</p>
+                <a href="/todo" class="button is-link modal-button" data-target="modal-image2">Under construction</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
       </div>
  
     </section>
