--- a/templates/main.html
+++ b/templates/main.html
@@ -73,7 +73,7 @@
             <div class="card-content">
               <div class="content">
                 <h4>Medium articles</h4>
-                <p>Interested in keeping up-to-date on education and technology? Check out all my articles including leadership, programming in education and even how the movie Top Gun can be used as a teaching resource and many more....  
+                <p>Interested in keeping up-to-date on education and technology? Check out all our articles including leadership, programming in education and even how the movie Top Gun can be used as a teaching resource and many more....  
                 </p>
                 <a href="https://che-kulhan.medium.com/" target="_blank" class="button is-link modal-button" data-target="modal-card">Go to Medium</a>
               </div>
